--- a/practice/practiceFunction.html
+++ b/practice/practiceFunction.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script defer src="practiceFunction.js"></script>
+
 </head>
 <body>
 
