--- a/js/object/object.html
+++ b/js/object/object.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>js object 정리</title>
     <script defer src="object.js"></script>
 </head>
 <body>
